# kube-rs-learn

./: Cargo.toml  README.md  compose.yaml  crd.yaml
.devcontainer/: compose.extend.yaml  devcontainer.json
config/: view_v1_markdown_view.yaml
src/: controller.rs  crdgen.rs  lib.rs  main.rs  markdown.rs
