[package]
name = "learn-kube-rs"
version = "0.1.0"
edition = "2021"
default-run = "controller"

[[bin]]
name = "controller"
path = "src/main.rs"

[[bin]]
name = "crdgen"
path = "src/crdgen.rs"

[lib]
name = "controller"
path = "src/lib.rs"

[dependencies]
kube = { version = "0.92.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.22.0", features = ["latest"] }
tokio = { version = "1.38.0", features = [
    "rt-multi-thread",
    "macros",
    "signal",
] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
serde_yaml = "0.9.33"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
thiserror = "1.0.61"
anyhow = "1.0.86"
futures = "0.3.30"
schemars = "0.8.21"
